--- a/p1.html
+++ b/p1.html
@@ -39,7 +39,7 @@
       <h3>
           So,I'm a <span> Computer Science Engineer</span>
       </h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt reiciendis voluptate minima id laudantium repellat illo, alias eligendi! Accusantium unde sint iusto perferendis, blanditiis architecto magnam asperiores amet deleniti odio.</p>
+      <p>i will write something later when im done dolor sit amet consectetur adipisicing elit. Incidunt reiciendis voluptate minima id laudantium repellat illo, alias eligendi! Accusantium unde sint iusto perferendis, blanditiis architecto magnam asperiores amet deleniti odio.</p>
 
        <div class="socal-icons">
         <a href="#">
