--- a/p1.html
+++ b/p1.html
@@ -70,8 +70,22 @@
 
 
     </section>
-    <section>
-      
+    <section class="about" id="about">
+      <div class="about-image">
+        <img src="Picsart_23-01-20_23-32-44-760.jpg" alt="">
+
+      </div>
+      <div class="about-content">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>I'm Mehraz Haque a Computer Science Engineer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+
+    <a href="#" class="btn">Download CV</a>
+
+        </div>
+
+     
+
 
     </section>
 
