--- a/p1.html
+++ b/p1.html
@@ -80,7 +80,7 @@
         <h3>I'm Mehraz Haque a Computer Science Engineer</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
 
-    <a href="#" class="btn">Download CV</a>
+    <a href="#" class="btn">Download CV</a>GIT 
 
         </div>
 
