--- a/p1.html
+++ b/p1.html
@@ -20,15 +20,19 @@
         Mehraz<span>Haque</span>
       </a>
 
-    <i class="menu"id="menu-icon"></i>
+     <i class="-menu" id="menu-icon"></i>
     <nav class="navbar">
          <a href="#home">Home</a>
          <a href="#about">About</a>
          <a href="#Services">Services</a>
-         <a href="#Project">Projects</a>
-         <a href="#Contact">Contact</a>
+         <a href="#Projects">Projects</a>
+         <a href="#contact">Contact</a>
     </nav>
-    <button class="gradient_btn">Contact Me</button>
+    <a href="#contact" class="gradient_btn">Contact Me</a>
+   
+</a>
+
+
     </header>
 
 
@@ -81,6 +85,10 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
 
     <a href="#" class="btn">Read More</a>
+    <a href="Mehraz_Haque_CV.pdf" class="gradient_btn" download>
+  Download CV
+</a>
+
 
         </div>
 
@@ -179,6 +187,82 @@
       <div class="btn">View Details</div>
     </div>
    </div>
+
+      </section>
+
+      <section class="contact" id="contact">
+    <h2 class="heading">Contact <span>Me</span></h2>  
+    <form action="">  
+
+ <div class="input-group">
+<div class="input-box">
+  <input type="text" 
+  placeholder="Enter Your Name" required>
+  <input type="email" placeholder="Enter Your Email" required>
+
+</div>
+<div class="input-box">
+  <input
+  type="text"
+  placeholder="Enter Your Phone Number"
+  inputmode="numeric"
+  pattern="[0-11]"
+    maxlength="11"
+  oninput="this.value = this.value.replace(/[^0-9]/g, '')"
+  required
+>
+
+  <input type="text"  placeholder="Enter Your Subject" required>
+
+</div>
+
+
+ </div>
+
+ <div class="input-group2">
+  <textarea name="message" id="" placeholder="Enter Your Message" cols="30" rows="10"></textarea>
+<input type="submit" value="Send Message" class="btn">
+
+<footer class="footer">
+<div class="socal-icons">
+        <a href="https://github.com/Mehraz-Haque">
+          <i class="bx bxl-github"></i>
+        </a>
+                <a href="https://www.instagram.com/mehraz_haqueee/">
+          <i class="bx bxl-instagram-alt"></i>
+        </a>
+                <a href="https://x.com/Haquemehraz">
+          <i class="bx bxl-twitter"></i>
+        </a>
+                <a href="https://www.facebook.com/mehraz.haque.tasin">
+          <i class="bx bxl-facebook"></i>
+        </a>
+       
+
+       </div>
+       <ul class="list">
+        <li>
+          <a href="#">FAQ</a>
+        </li>
+
+        <li><a href="#Services">Services</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contact" class="gradient_btn">Contact Me</a></li>
+
+       </ul>
+       <p>&copy; 2024 Mehraz Haque. All rights reserved.</p>
+
+</footer>
+
+
+ </div>
+
+    </form>
+ 
+
+
 
       </section>
 
